[31.January 2009]
- rect.rb, rect2.rb: removed
- rect3.rb: after more than 2 hours of debugging FreeVikings::Wall
  and FreeVikings::Bomb I found an error in Rectangle#w= and h=

[23.January 2009]
- schwerengine.rb,
  entity.rb, sprite.rb, item.rb, activeobject.rb, staticobject.rb,
  hero.rb, monster.rb:
  classes which are very freeVikings-specific moved back to freeVikings
- rect3.rb: last zombie of experiments on 21.1. removed

[22.January 2009]
- rect3.rb: removed remaining 'require' after yesterday's RubyInline
  optimization craziness

[21.January 2009]
- relativerect.rb: attempt to optimization: removed inheritance,
  implemented smallest set of methods to run freeVikings
- rect3.rb: added methods set_pos, set_values, copy_pos

[31.December 2008]
- relativerect.rb: added method point_inside?

[30.December 2008]
- map.rb: fixed painting on Surface with clip (I didn't probably understand 
          well what clip is...)

[29.December 2008]
- entity.rb: attribute 'location' added
- rect3.rb: added method Rectangle#point_inside?

[26.December 2008]
- rudlmore.rb: copied from freeVikings
- image.rb: mirroring methods added
- model.rb: Model#add_pair: possibility to switch off check of sizes

[22.December 2008]
- spritemanager.rb: SpriteManager#update removed, #each added

[19.December 2008]
- spritesheet.rb: simple support for spritesheets
- animation.rb: fixed one ancient error

[15.December 2008]
- tiledmaploadstrategy.rb: possibility to switch off displaying of a layer
  (layer property 'display' with value 'no' or 'false')

[12.December 2008]
- rect3.rb: further optimization of rect2.rb:
  Rectangle#right and #bottom aren't computed dynamically, they are
  implemented as numeric variables updated each time other internals are
  changed; Rectangle#collides? is also optimized a bit
- rect2.rb, rect3.rb: Rectangle#== repaired
- rect.rb: isolated in module SchwerEngine::Old
- tests/testrectN.rb: test cases for all three Rectangle classes